--- a/intro.tex
+++ b/intro.tex
@@ -2,7 +2,7 @@
 \label{sec:introduction}
 Although drawn from a wide range of domains, most real world networks exhibit common properties, such as a community structure, homophily or,  bustiness related to  preferential attachment (\cite{Newman2010, Barabasi2003}).
 
-In recent years, these properties enabled implementing algorithms to solve the  problem commonly known as link prediction which consists in predicting the likelihood of a future association between two nodes in the network (\cite{Liben-Nowell07, HassanZaki11}). Among the methods that have proven their efficiency to handle this task, one can mentioned the probabilistic approaches which model the joint probability among the vertices in the network by Bayesian graphical models. In this article, we consider more particularly two types of models belonging to this family: the latent feature model [meeds] and the mixed-membership stochastic block model [Airoldi] and, to be as general as possible, their non-parametric extensions, respectively based on the Indian Buffet Process (IBP) and the Hierarchical Dirichlet Process(HDP).
+In parallel, recent years have seen powerful relational learning models enable implementing algorithms to solve the  problem commonly known as link prediction which consists in predicting the likelihood of a future association between two nodes in the network (\cite{Liben-Nowell07, HassanZaki11}). Among the methods that have proven their efficiency to handle this task, one can mentioned the probabilistic approaches which model the joint probability among the vertices in the network by Bayesian graphical models. In this article, we consider more particularly two types of models belonging to this family: the latent feature model [meeds] and the mixed-membership stochastic block model [Airoldi] and, to be as general as possible, their non-parametric extensions, respectively based on the Indian Buffet Process (IBP) and the Hierarchical Dirichlet Process(HDP).
  
 %\textbf{blbla sur LFRM et sur MMSBM}. 
 Our aim is to study the ability of these models to capture two properties commonly observed in real networks: homophily and preferential attachment.
