--- a/models.tex
+++ b/models.tex
@@ -44,7 +44,7 @@ This model makes use of two real hyper-parameters, one for the IBP process ($\al
 	\label{fig:ilfrm}
 \end{figure}
 
-Standard Gibbs sampling and Metropolis-Hastings algorithms can be used for inference in this model. We do not detail them here and refer the interested reader to \cite{ILFRM}.
+Standard Gibbs sampling and Metropolis-Hastings algorithms can be used for inference in this model. We do not detail them here and refer the interested reader to \cite{ILFRM} and \cite{IBP}.
 
 %We here only provide the main updates, useful for the developments presented in the next sections, and refer the reader to \cite{IBP} for a detailed treatment. The Gibbs update for the matrix $\mat{F}$ are given by:
 %%
