--- a/appendix.tex
+++ b/appendix.tex
@@ -68,10 +68,12 @@ And, finnaly  $\mat{\beta}$ is obtained by:
 Where $s(n,m)$ is the unsigned Stirling number of the first kind.
 
 
-
-\textcolor{red}{ELSEWHERE ?It appears that we only need to keep track of two count matrices to perform this task. The count for node $i$ being assigned to class $k$ is $N_{ik}$. And the count of for all couple of classes $c=(k,k')$ being associated to relation $r$ is $M_{cr}$. Note that in our case, the relation $r$ take values in (0,1) accounting for link or non-link between two node. Hence the feature matrix $\mat{(F)}$ and the weight matrix $\mat{Phi}$ can be restored by averaging the class assignments:
+~\\
+Finally, when the markov chain reach the stationnary distribution, the models parameters $\M = \mat{Phi}, \mat{F}$ can be recovered by averaging the topics assignement counts for each membership and each relation:
 \begin{align}
 &\pr(f_{ik}) =\frac{ N_{ik} + \alpha\beta_k}{ N_{i\bm{.}} + \sum_k\alpha_k }\\
 &\pr(\phi_c ) = \frac{M_{c1} + \lambda_1}{M_{c\bm{.}} + \lambda_0 + \lambda_1}
 \end{align}
 }
+
+The count for node $i$ being assigned to membership $k$ is $N_{ik}$. And the count of for all couple of classes $c=(k,k')$ being associated to relation $r$ is $M_{cr}$. Note that in our case, the relation $r$ take values in (0,1) accounting for link or non-link between two node.
