--- a/a.bib
+++ b/a.bib
@@ -412,3 +412,13 @@ publisher={JSTOR}
 	PUBLISHER = "{PLUME}, Penguin Book, USA",
 	YEAR = "2011"
 }
+@article{cohen2003scale,
+    title={Scale-free networks are ultrasmall},
+    author={Cohen, Reuven and Havlin, Shlomo},
+    journal={Physical review letters},
+    volume={90},
+    number={5},
+    pages={058701},
+    year={2003},
+    publisher={APS}
+}
